Build properly